mdapipkg/unpackaged/objects/ProductCatalog__c.object
<CustomObject>
    <fields>
        <fullName>ChargeCode__c</fullName>
        <label>ChargeCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPIEnvironment__c</fullName>
        <label>DPIEnvironment</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemCode__c</fullName>
        <label>ItemCode</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPA__c</fullName>
        <label>NPA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NXX__c</fullName>
        <label>NXX</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductRate__c</fullName>
        <label>ProductRate</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>ServiceType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tariff__c</fullName>
        <label>Tariff</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ProductCatalog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProductCatalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductCatalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>